<resources>
    <string name="app_name">FitnessLog</string>
    <string name="workout">Workout</string>
    <string name="history">History</string>
    <!--  Program Screen  -->
    <string name="program">Program</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="select_program">Select Program</string>
    <string name="edit_program">Edit Program</string>
    <string name="create_new_program">Create New Program</string>
    <string name="edit">Edit</string>
    <string name="workout_count">%1$d %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_workout_fragment">Hello workout fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_history_fragment">Hello history fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_program_fragment">Hello program fragment</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer">Timer</string>
    <string name="select_schedule">Select Schedule</string>
    <string name="program_name">Program Name</string>
    <string name="create_program">Create Program</string>
    <string name="schedule">Schedule</string>
    <string name="rest_time">Rest Time</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_workout">Add Workout</string>
    <string name="delete_program">Delete Program</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="add">Add</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="btn_add_count">Add (%1$d)</string>
    <string name="btn_delete_count">Delete (%1$d)</string>
    <string name="muscle">Muscle</string>
    <string name="resistance">Resistance</string>
    <string name="abs">Abs</string>
    <string name="arms">Arms</string>
    <string name="chest">Chest</string>
    <string name="back_muscle">Back</string>
    <string name="legs">Legs</string>
    <string name="shoulders">Shoulders</string>
    <string name="other">Other</string>
    <string name="machine">Machine</string>
    <string name="body_weight">Body Weight</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="barbell">Barbell</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="lbs">Lbs</string>
    <string name="set_number">%1$d</string>
    <string name="add_set">Add Set</string>
    <string name="fitness_log">Fitness Log</string>
</resources>