<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:chipSpacingVertical="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonday"
            style="@style/ChipFilter"
            android:checked="true"
            android:text="@string/monday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTuesday"
            style="@style/ChipFilter"
            android:checked="true"
            android:text="@string/tuesday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWednesday"
            style="@style/ChipFilter"
            android:checked="true"
            android:text="@string/wednesday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThursday"
            style="@style/ChipFilter"
            android:checked="true"
            android:text="@string/thursday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFriday"
            style="@style/ChipFilter"
            android:checked="true"
            android:text="@string/friday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSaturday"
            style="@style/ChipFilter"
            android:text="@string/saturday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSunday"
            style="@style/ChipFilter"
            android:text="@string/sunday" />


    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>