<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitleMuscleSelect"
        style="@style/DialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muscle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgMuscleSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp"
        app:chipSpacingVertical="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleMuscleSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectAbs"
            style="@style/ChipSelect"
            android:text="@string/abs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectArms"
            style="@style/ChipSelect"
            android:text="@string/arms" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectBack"
            style="@style/ChipSelect"
            android:text="@string/back_muscle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectChest"
            style="@style/ChipSelect"
            android:text="@string/chest" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectLegs"
            style="@style/ChipSelect"
            android:text="@string/legs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelectShoulders"
            style="@style/ChipSelect"
            android:text="@string/shoulders" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>