<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleResistanceSelect"
            style="@style/DialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resistance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgResistanceSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="40dp"
            app:chipSpacingVertical="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleResistanceSelect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSelectBarbell"
                style="@style/ChipSelect"
                android:text="@string/barbell" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSelectDumbbell"
                style="@style/ChipSelect"
                android:text="@string/dumbbell" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSelectBodyWeight"
                style="@style/ChipSelect"
                android:text="@string/body_weight" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSelectMachine"
                style="@style/ChipSelect"
                android:text="@string/machine" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSelectOther"
                style="@style/ChipSelect"
                android:text="@string/other" />


        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>