<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_navigate_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NavigateBackButton"
            android:text="@string/program"
            app:drawableStartCompat="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintTop_toTopOf="@id/tvTitleWorkoutTemplate"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleWorkoutTemplate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTitleWorkoutTemplate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FragmentTitle"
            android:text="@string/edit_workout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameWorkoutTemplate"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_name"
            app:layout_constraintTop_toBottomOf="@id/tvTitleWorkoutTemplate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameWorkoutTemplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapWords"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvExercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercises"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="@+id/tilNameWorkoutTemplate"
            app:layout_constraintTop_toBottomOf="@+id/tilNameWorkoutTemplate"
            android:layout_marginTop="24dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvExercises"
            app:layout_constraintStart_toStartOf="@id/tvExercises"
            app:layout_constraintEnd_toEndOf="@id/tilNameWorkoutTemplate" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddExercise"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="?attr/colorTertiaryContainer"
            android:text="@string/add_exercise"
            app:icon="@drawable/baseline_add_24"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="@id/rvExercises"
            app:layout_constraintEnd_toEndOf="@id/rvExercises"
            app:layout_constraintTop_toBottomOf="@id/rvExercises" />

        <Button
            android:id="@+id/btnDeleteProgram"
            style="@style/DeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_workout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fabAddExercise"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
