<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".program.ui.program_create.ProgramCreateFragment">

    <TextView
        android:id="@+id/btnCancelProgramCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CancelButton"
        app:layout_constraintTop_toTopOf="@+id/tvTitleProgramCreate"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleProgramCreate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitleProgramCreate"
        style="@style/FragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_program"
        tools:text="Create Program"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnSaveProgramCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SaveButton"
        app:layout_constraintTop_toTopOf="@+id/tvTitleProgramCreate"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleProgramCreate"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameProgramCreate"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/program_name"
        app:layout_constraintTop_toBottomOf="@id/tvTitleProgramCreate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameProgramCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btnScheduleProgramCreate"
        style="@style/ActionInfoButton"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/tilNameProgramCreate"
        app:layout_constraintTop_toBottomOf="@+id/tilNameProgramCreate"
        app:layout_constraintEnd_toEndOf="@id/tilNameProgramCreate">

        <TextView
            style="@style/ActionInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule" />

        <TextView
            android:id="@+id/tvScheduledDaysProgramCreate"
            style="@style/ActionInfoContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mo/Tu/We/Th/Fr/Sa/Su" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRestTimeProgramCreate"
        style="@style/ActionInfoButton"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/btnScheduleProgramCreate"
        app:layout_constraintTop_toBottomOf="@+id/btnScheduleProgramCreate"
        app:layout_constraintEnd_toEndOf="@+id/btnScheduleProgramCreate">

        <TextView
            style="@style/ActionInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rest Time" />

        <TextView
            android:id="@+id/tvRestTimeProgramCreate"
            style="@style/ActionInfoContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1m30s" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>